--- a/packages/front-end/src/app/app.module.scss
+++ b/packages/front-end/src/app/app.module.scss
@@ -1,33 +1,140 @@
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100px;
-    background-color: #f2f2f7;
+.containerHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+  background-color: #f2f2f7;
 }
 
 .heading {
-    margin: 0;
-    color: rgb(63, 61, 61);
-    padding-left: 1rem;
-    width: 20%;
+  margin: 0;
+  color: rgb(63, 61, 61);
+  padding-left: 1rem;
+  width: 20%;
 }
 
 .form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
 }
 
 .inputGroup {
-    flex-direction: column;
-    gap: 1rem;
-    margin-right: 30rem;
-    width: 100%;
+  flex-direction: column;
+  gap: 1rem;
+  margin-right: 30rem;
+  width: 100%;
 }
 
 .input {
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem;
+  font-size: 1.1rem;
+  background-color: #f2f2f7;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  outline: none;
+}
+
+.button {
+  background-color: #007aff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem;
+  font-size: 1.1rem;
+  cursor: pointer;
+  margin-top: 1rem;
+}
+
+.treeType {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1rem;
+  width: 30%;
+}
+
+.radioText {
+  font-size: 1rem;
+  margin-left: 0.5rem;
+}
+
+input[type="radio"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  position: relative;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: 1px solid #d1d1d6;
+  margin-right: 10px;
+  transition: all 0.3s;
+}
+
+input[type="radio"]:checked::before {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #007aff;
+}
+
+@media (max-width: 1200px) {
+  .containerHeader {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    height: 100vh;
+    background-color: #f2f2f7;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    border-radius: 10px;
+    height: auto;
+    margin: auto;
+  }
+
+  .header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+
+  .heading {
+    width: 100%;
+  }
+
+  .heading {
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+
+  .form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1rem;
+  }
+
+  .inputGroup {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .input {
     border: none;
     border-radius: 5px;
     padding: 0.5rem;
@@ -35,9 +142,10 @@
     background-color: #f2f2f7;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     outline: none;
-}
+    width: 100%;
+  }
 
-.button {
+  .button {
     background-color: #007aff;
     color: white;
     border: none;
@@ -46,26 +154,30 @@
     font-size: 1.1rem;
     cursor: pointer;
     margin-top: 1rem;
-}
+    width: 100%;
+    transition: background-color 0.3s ease-in-out;
+  }
 
-.treeType {
+  .button:hover {
+    background-color: #004fa3;
+  }
+
+  .treeType {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: space-around;
+    width: 100%;
     margin-top: 1rem;
-    width: 30%;
-}
+  }
 
-.radioText {
+  .radioText {
     font-size: 1rem;
     margin-left: 0.5rem;
-}
+  }
 
-input[type="radio"] {
+  input[type="radio"] {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-
     position: relative;
     display: inline-block;
     width: 16px;
@@ -74,9 +186,9 @@ input[type="radio"] {
     border: 1px solid #d1d1d6;
     margin-right: 10px;
     transition: all 0.3s;
-}
+  }
 
-input[type="radio"]:checked::before {
+  input[type="radio"]:checked::before {
     content: "";
     position: absolute;
     top: 2px;
@@ -85,112 +197,6 @@ input[type="radio"]:checked::before {
     height: 10px;
     border-radius: 50%;
     background-color: #007aff;
-}
-
-@media (max-width: 1200px) {
-    .container {
-        display: grid;
-        grid-template-rows: auto 1fr;
-        height: 100vh;
-        background-color: #f2f2f7;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 1rem;
-        border-radius: 10px;
-        height: auto;
-        margin: auto;
-      }
-      
-      .header {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 1rem;
-        background-color: white;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
-
-      .heading {
-        width: 100%;
-    }
-      
-      .heading {
-        font-size: 2rem;
-        text-align: center;
-        margin-bottom: 1rem;
-      }
-      
-      .form {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 1rem;
-      }
-      
-      .inputGroup {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-      }
-      
-      .input {
-        border: none;
-        border-radius: 5px;
-        padding: 0.5rem;
-        font-size: 1.1rem;
-        background-color: #f2f2f7;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        outline: none;
-        width: 100%;
-      }
-      
-      .button {
-        background-color: #007aff;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        padding: 0.5rem;
-        font-size: 1.1rem;
-        cursor: pointer;
-        margin-top: 1rem;
-        width: 100%;
-      }
-      
-      .treeType {
-        display: flex;
-        justify-content: space-around;
-        margin-top: 1rem;
-      }
-      
-      .radioText {
-        font-size: 1rem;
-        margin-left: 0.5rem;
-      }
-      
-      input[type="radio"] {
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-        position: relative;
-        display: inline-block;
-        width: 16px;
-        height: 16px;
-        border-radius: 50%;
-        border: 1px solid #d1d1d6;
-        margin-right: 10px;
-        transition: all 0.3s;
-      }
-      
-      input[type="radio"]:checked::before {
-        content: "";
-        position: absolute;
-        top: 2px;
-        left: 2px;
-        width: 10px;
-        height: 10px;
-        border-radius: 50%;
-        background-color: #007aff;
-      }
+  }
 
 }
