--- a/packages/front-end/src/app/FamilyTree.module.scss
+++ b/packages/front-end/src/app/FamilyTree.module.scss
@@ -1,19 +1,11 @@
-/* Family tree container */
-.familyTree {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1rem;
-  }
-  
-  /* Person container */
-  .person {
+/* Person container */
+.person {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 1rem;
     background-color: #f2f2f2;
-    border: 1px solid #ccc;
+    color: rgb(63, 61, 61);
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     width: 200px;
@@ -28,6 +20,8 @@
     border-radius: 50%;
     object-fit: cover;
     margin-bottom: 1rem;
+    border: 2px solid #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
   
   /* Person name */
@@ -35,10 +29,16 @@
     margin: 0;
     font-size: 1.2rem;
     font-weight: bold;
+    text-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
   
   /* Person date of birth and death */
   .person p {
     margin: 0.5rem 0 0;
     font-size: 1rem;
+    text-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+  
+  svg {
+    position: absolute;
   }
