--- a/packages/front-end/src/app/add-person.module.scss
+++ b/packages/front-end/src/app/add-person.module.scss
@@ -5,24 +5,14 @@ $border-color: #e5e5ea;
 $font-color: #333;
 
 /* Global Styles */
-body {
+.container {
   background-color: $background-color;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   color: $font-color;
 }
 
-button {
-  background-color: $primary-color;
-  color: #fff;
-  padding: 8px 16px;
-  border-radius: 4px;
-  border: none;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-input,
+.container input,
 select {
   border: 1px solid $border-color;
   border-radius: 4px;
@@ -31,7 +21,7 @@ select {
   width: 100%;
 }
 
-label {
+.formAddPerson label {
   font-weight: bold;
   display: block;
   margin-bottom: 8px;
@@ -47,7 +37,7 @@ label {
   margin-bottom: 0;
 }
 
-form {
+.formAddPerson {
   background-color: #fff;
   padding: 24px;
   border-radius: 8px;
@@ -56,14 +46,14 @@ form {
   margin: 0 auto;
 }
 
-h1 {
+.container h1 {
   font-size: 32px;
   font-weight: bold;
   text-align: center;
   margin-bottom: 32px;
 }
 
-button[type='submit'] {
+.submit {
   margin-top: 16px;
   background-color: $primary-color;
   color: #fff;
@@ -73,7 +63,7 @@ button[type='submit'] {
   font-weight: bold;
 }
 
-button[type='submit']:hover {
+.submit:hover {
     background-color: #007aff;
   }
 
