--- a/packages/front-end/src/app/FamilyTree.module.scss
+++ b/packages/front-end/src/app/FamilyTree.module.scss
@@ -1,10 +1,12 @@
+@import 'variables';
+
 /* Person container */
 .person {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1rem;
-  background-color: #f2f2f2;
+  background-color: $background-color;
   color: rgb(63, 61, 61);
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -20,7 +22,7 @@
   border-radius: 50%;
   object-fit: cover;
   margin-bottom: 1rem;
-  border: 2px solid #fff;
+  border: 2px solid $background-color;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
