--- a/packages/front-end/src/app/add-person.module.scss
+++ b/packages/front-end/src/app/add-person.module.scss
@@ -1,8 +1,4 @@
-/* Variables */
-$primary-color: #0265cf;
-$background-color: #f2f2f7;
-$border-color: #e5e5ea;
-$font-color: #333;
+@import 'variables';
 
 /* Global Styles */
 .container {
@@ -38,7 +34,7 @@ select {
 }
 
 .formAddPerson {
-  background-color: #fff;
+  background-color: $background-color;
   padding: 24px;
   border-radius: 8px;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
@@ -56,30 +52,33 @@ select {
 .submit {
   margin-top: 16px;
   background-color: $primary-color;
-  color: #fff;
+  color: $background-color;
   padding: 16px;
   width: 100%;
   font-size: 18px;
   font-weight: bold;
+  border: 2px solid $background-color;
+  border-radius: 5px;
 }
 
 .submit:hover {
-    background-color: #007aff;
-  }
+    background-color: $secondary-color;
+}
 
 .addChildButton {
   margin-top: 16px;
-  background-color: #28aa3a;
-  color: white;
+  background-color: $add-primary-color;
+  color: $background-color;
   padding: 16px;
   width: 100%;
   font-size: 18px;
   font-weight: bold;
-  border: 2px solid white;
+  border: 2px solid $background-color;
+  border-radius: 5px;
 }
 
 .addChildButton:hover {
-  background-color: #0ebd25;
+  background-color: $add-secondary-color;
 }
 
 .childFormGroup {
@@ -93,23 +92,23 @@ select {
   margin-left: 10px;
   padding: 5px;
   border-radius: 5px;
-  background-color: #ff4136;
-  color: white;
+  background-color: $remove-primary-color;
+  color: $background-color;
   border: none;
   cursor: pointer;
 }
 
 .removeChildButton:hover {
-  background-color: #ff0000;
-  color: white;
+  background-color: $remove-secondary-color;
+  color: $background-color;
 }
 
 .familytree {
   display: flex;
   width: 100px;
-  background-color: #007aff;
+  background-color: $primary-color;
   text-decoration: none;
-  color: white;
+  color: $background-color;
   border: none;
   border-radius: 5px;
   padding: 0.5rem;
@@ -117,4 +116,8 @@ select {
   cursor: pointer;
   margin-top: 1rem;
   margin-right: 2rem;
+}
+
+.familytree:hover {
+  background-color: $secondary-color;
 }
