--- a/packages/front-end/src/app/family-tree-page.module.scss
+++ b/packages/front-end/src/app/family-tree-page.module.scss
@@ -1,9 +1,11 @@
+@import 'variables';
+
 .containerHeader {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 150px;
-  background-color: #f2f2f7;
+  background-color: $background-color;
 }
 
 .heading {
@@ -32,20 +34,24 @@
   border-radius: 5px;
   padding: 0.5rem;
   font-size: 1.1rem;
-  background-color: #f2f2f7;
+  background-color: $background-color;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   outline: none;
 }
 
 .button {
-  background-color: #007aff;
-  color: white;
+  background-color: $primary-color;
+  color: $background-color;
   border: none;
   border-radius: 5px;
   padding: 0.5rem;
   font-size: 1.1rem;
   cursor: pointer;
   margin-top: 1rem;
+}
+
+.button:hover {
+  background-color: $secondary-color;
 }
 
 .treeType {
@@ -71,7 +77,7 @@ input[type='radio'] {
   width: 16px;
   height: 16px;
   border-radius: 50%;
-  border: 1px solid #d1d1d6;
+  border: 1px solid #797777;
   margin-right: 10px;
   transition: all 0.3s;
 }
@@ -84,13 +90,13 @@ input[type='radio']:checked::before {
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background-color: #007aff;
+  background-color: $primary-color;
 }
 
 .login {
-  background-color: #007aff;
+  background-color: $primary-color;
   text-decoration: none;
-  color: white;
+  color: $background-color;
   border: none;
   border-radius: 5px;
   padding: 0.5rem;
@@ -98,14 +104,18 @@ input[type='radio']:checked::before {
   cursor: pointer;
   margin-top: 1rem;
   margin-right: 2rem;
+}
+
+.login:hover {
+  background-color: $secondary-color;
 }
 
 .add {
   display: flex;
   width: 90px;
-  background-color: #1b750f;
+  background-color: $add-primary-color;
   text-decoration: none;
-  color: white;
+  color: $background-color;
   border: none;
   border-radius: 5px;
   padding: 0.5rem;
@@ -113,6 +123,10 @@ input[type='radio']:checked::before {
   cursor: pointer;
   margin-top: 1rem;
   margin-right: 2rem;
+}
+
+.add:hover {
+  background-color: $add-secondary-color;
 }
 
 @media (max-width: 1200px) {
@@ -120,7 +134,7 @@ input[type='radio']:checked::before {
     display: grid;
     grid-template-rows: auto 1fr;
     height: 100vh;
-    background-color: #f2f2f7;
+    background-color: $background-color;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -136,7 +150,7 @@ input[type='radio']:checked::before {
     justify-content: center;
     align-items: center;
     padding: 1rem;
-    background-color: white;
+    background-color: $background-color;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
 
@@ -167,14 +181,14 @@ input[type='radio']:checked::before {
     border-radius: 5px;
     padding: 0.5rem;
     font-size: 1.1rem;
-    background-color: #f2f2f7;
+    background-color: $background-color;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     outline: none;
     width: 100%;
   }
 
   .button {
-    background-color: #007aff;
+    background-color: $primary-color;
     color: white;
     border: none;
     border-radius: 5px;
@@ -187,7 +201,7 @@ input[type='radio']:checked::before {
   }
 
   .button:hover {
-    background-color: #004fa3;
+    background-color: $secondary-color;
   }
 
   .treeType {
@@ -200,30 +214,5 @@ input[type='radio']:checked::before {
   .radioText {
     font-size: 1rem;
     margin-left: 0.5rem;
-  }
-
-  input[type='radio'] {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    position: relative;
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    border: 1px solid #d1d1d6;
-    margin-right: 10px;
-    transition: all 0.3s;
-  }
-
-  input[type='radio']:checked::before {
-    content: '';
-    position: absolute;
-    top: 2px;
-    left: 2px;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: #007aff;
   }
 }
